# crypto-analytics

./: .dockerignore  .gitignore  env.sample  instructions.txt  readme.md
airflow/: .env.sample  Dockerfile  docker-compose.yaml  pyproject.toml
airflow/dags/: assets.py  crypto_news_dag.py  crypto_prices_daily.py  crypto_transform.py
dbt/: .user.yml  dbt_project.yml  generate_schema_name.sql  packages.yml  profiles.yml  pyproject.toml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: dim_coins.sql  fact_news.sql  fact_price_sentiment.sql  fact_prices.sql
dbt/models/staging/: _sources.yml  stg_crypto_news.sql  stg_crypto_prices.sql
python/: main.py  pyproject.toml
python/config/: settings.py
python/ingestion/: coingecko_client.py  ingest_news_articles.py  ingest_prices.py  news_api_client.py
python/tests/: test_file_writer.py
python/utils/: file_writer.py  gcs_writer.py  logger.py
streamlit-dashboard/: Dockerfile  Home.py  pyproject.toml
streamlit-dashboard/pages/: Correlation.py  Price Trends.py  Sentiments.py
streamlit-dashboard/utils/: bq_client.py
terraform/: main.tf  provider.tf  readme.md  variables.tf
terraform/envs/: dev.tfvars  prod.tfvars  staging.tfvars
