[project]
name = "crypto_pipeline"
version = "0.1.0"
description = "Crypto market data ingestion pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.10.1",
    "loguru>=0.7.3",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "vadersentiment>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
