[project]
name = "crypto_pipeline"
version = "0.1.0"
description = "Crypto market data ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=2.16.0",
    "loguru>=0.7.3",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "vadersentiment>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "ingestion*", "utils*", "transformation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
